--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cros": "^1.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
   }
