--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,6 +15,8 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "apexcharts": "3.35.5",
     "react": "19.0.0",
     "react-apexcharts": "1.4.0",
