--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
     "@chakra-ui/tooltip": "^2.2.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-table": "^8.7.9",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
@@ -18,11 +19,13 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "apexcharts": "3.35.5",
+    "axios": "^1.9.0",
     "react": "19.0.0",
     "react-apexcharts": "1.4.0",
     "react-calendar": "^5.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "tailwindcss-rtl": "^0.9.0",
